--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -171,12 +171,13 @@ Resources:
                 # setup AWS CLI to talk to vended account
                 - aws configure --profile test_account set role_arn $aws_cross_account_role_arn
                 - aws configure --profile test_account set credential_source EcsContainer
-                - |
-                  set -m # enable job control
-                  aws --profile test_account cloudformation deploy --stack-name superwerker --template-file components/superwerker.yaml --parameter-overrides Domain=${ROOT_MAIL_DOMAIN} TemplateUrlPrefix=${TEMPLATE_URL_PREFIX} --capabilities CAPABILITY_AUTO_EXPAND CAPABILITY_IAM --no-fail-on-empty-changeset & \
-                  while ! domain_name_servers=$(aws --profile test_account ssm get-parameter --name /superwerker/domain_name_servers --query Parameter.Value --output text); do sleep 10; done; \
-                  aws cloudformation deploy --stack-name superwerker-pipeline-dns-wiring --template-file tests/pipeline-dns-wiring.yaml --parameter-overrides RootMailDelegationTarget=$domain_name_servers RootMailDomain=${ROOT_MAIL_DOMAIN} --no-fail-on-empty-changeset; \
-                  fg # wait for superwerker stack to finish
+
+                # setup superwerker in vended account
+                - aws --profile test_account cloudformation deploy --stack-name superwerker --template-file components/superwerker.yaml --parameter-overrides Domain=${ROOT_MAIL_DOMAIN} TemplateUrlPrefix=${TEMPLATE_URL_PREFIX} --capabilities CAPABILITY_AUTO_EXPAND CAPABILITY_IAM --no-fail-on-empty-changeset &
+                - while ! domain_name_servers=$(aws --profile test_account ssm get-parameter --name /superwerker/domain_name_servers --query Parameter.Value --output text); do sleep 10; done
+                - aws cloudformation deploy --stack-name superwerker-pipeline-dns-wiring --template-file tests/pipeline-dns-wiring.yaml --parameter-overrides RootMailDelegationTarget=$domain_name_servers RootMailDomain=${ROOT_MAIL_DOMAIN} --no-fail-on-empty-changeset
+                - sleep 3600 # give superwerker stack time to finish (Control Tower needs ~1h)
+                - aws --profile test_account cloudformation wait stack-create-complete --stack-name superwerker
 
                 - aws --profile test_account cloudformation deploy --stack-name superwerker-pipeline-account-factory-wiring --template-file tests/account-factory-wiring.yaml --parameter-overrides PipelineCloudformationRoleArn=$aws_cross_account_role_arn --capabilities CAPABILITY_AUTO_EXPAND CAPABILITY_IAM --no-fail-on-empty-changeset
                 - aws --profile test_account cloudformation deploy --stack-name superwerker-pipeline-account-factory-fixture --template-file tests/account-factory.yaml --parameter-overrides AccountName=sw-${aws_account_id} AccountEmail=root+${aws_account_id}@aws.${ROOT_MAIL_DOMAIN} SSOUserFirstName=Isolde SSOUserLastName=Mawidder-Baden SSOUserEmail=root+${aws_account_id}@aws.${ROOT_MAIL_DOMAIN} ManagedOrganizationalUnit=Custom --capabilities CAPABILITY_AUTO_EXPAND CAPABILITY_IAM --no-fail-on-empty-changeset
