--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -555,12 +555,17 @@ Resources:
               Action:
                 - ssm:CreateOpsItem
               Resource: "*"
+            - Action: ssm:PutParameter
+              Effect: Allow
+              Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/superwerker/*
       InlineCode: !Sub |
         import boto3
         import email
         from email import policy
         import hashlib
         import json
+        import re
+        import datetime
 
         s3 = boto3.client('s3')
         ssm = boto3.client('ssm')
@@ -614,12 +619,39 @@ Resources:
               msg = email.message_from_bytes(response["Body"].read(), policy=policy.default)
 
               title=msg["subject"]
+
+              source=recipient=event["Records"][0]["ses"]["mail"]["destination"][0]
+
+              if title == 'Amazon Web Services Password Assistance':
+                description=msg.get_body('html').get_content()
+                pw_reset_link = re.search(r'(https://signin.aws.amazon.com/resetpassword(.*?))(?=<br>)', description).group()
+                rootmail_identifier = '/superwerker/rootmail/pw_reset_link/{}'.format(source.split('@')[0].split('root+')[1])
+                ssm.put_parameter(
+                    Name=rootmail_identifier,
+                    Value=pw_reset_link,
+                    Overwrite=True,
+                    Type='String',
+                    Tier='Advanced',
+                    Policies=json.dumps([
+                      {
+                        "Type":"Expiration",
+                        "Version":"1.0",
+                        "Attributes":{
+                          "Timestamp": (datetime.datetime.now() + datetime.timedelta(minutes = 10)).strftime('%Y-%m-%dT%H:%M:%SZ') # expire in 10 minutes
+                        }
+                      }
+                    ])
+                )
+                return # no ops item for now
+
+              else:
+                description=msg.get_body('plain').get_content()
+
               title=title[:1020] + " ..." * (len(title) > 1020)
 
               description=msg.get_body("plain").get_content()
               description=description[:1020] + " ..." * (len(description) > 1020)
 
-              source=recipient=event["Records"][0]["ses"]["mail"]["destination"][0]
               source=source[:60] + ' ...' * (len(source) > 60)
 
               operational_data={
