make one click links from readme work again
by going back to pipeline per branch.

pipeline bucket per account is a relict from pre-ovm-times

--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -118,7 +118,7 @@ Resources:
   DeploymentBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub superwerker-deployment-${AWS::AccountId}
+      BucketName: !Sub superwerker-deployment-${BranchName}
 
   DeploymentBucketPolicy:
     Type: AWS::S3::BucketPolicy
