allow multiple parallel test environments
by giving each run it's own subdomain (the vended aws account id)

this is another prerequisite for matrix tests as well

--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -10,6 +10,8 @@ Parameters:
     Default: ""
   Domain:
     Type: String
+  Subdomain:
+    Type: String
   IncludeControlTower:
     AllowedValues:
       - true
@@ -161,6 +163,7 @@ Resources:
       TemplateURL: !Sub ${TemplateUrlPrefix}/components/rootmail.yaml
       Parameters:
         Domain: !Ref Domain
+        Subdomain: !Ref Subdomain
 
   SecurityHub:
     Condition: IncludeSecurityHub
