workaround guardduty activation bug by sleeping

--- a/components/guardduty.yaml
+++ b/components/guardduty.yaml
@@ -92,7 +92,10 @@ Resources:
               Service: guardduty
               Api: CreateDetector
               Enable: true
-            nextStep: EnableGuardDutyExistingAccounts
+          - name: SleepEnableGuardDutyExistingAccounts # GuardDuty Org Admin needs to settle first, give it some time
+            action: aws:sleep
+            inputs:
+              Duration: PT120S
           - name: EnableGuardDutyExistingAccounts
             action: aws:executeAwsApi
             inputs:
@@ -113,7 +116,6 @@ Resources:
             outputs:
               - Name: AutomationExecutionId
                 Selector: $.AutomationExecutionId
-            nextStep: WaitForEnableGuardDutyExistingAccounts
           - name: WaitForEnableGuardDutyExistingAccounts
             timeoutSeconds: 60
             action: aws:waitForAwsResourceProperty
