--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -423,3 +423,314 @@ Resources:
           })
           http = urllib3.PoolManager()
           http.request('PUT', os.environ['SIGNAL_URL'], body=encoded_body)
+
+
+  BackupTagRemediationPublic:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt BackupTagRemediationPublicCustomResource.Arn
+
+  BackupTagRemediationPublicCustomResource:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: python3.7
+      Environment:
+        Variables:
+          DOCUMENT_NAME: !Ref BackupTagRemediation
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action: ssm:ModifyDocumentPermission
+              Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:document/${BackupTagRemediation}
+      InlineCode: |
+        import boto3
+        import cfnresponse
+        import os
+
+        ssm = boto3.client("ssm")
+
+        CREATE = 'Create'
+        DELETE = 'Delete'
+        UPDATE = 'Update'
+
+
+        def exception_handling(function):
+            def catch(event, context):
+                try:
+                    function(event, context)
+                except Exception as e:
+                    print(e)
+                    print(event)
+                    cfnresponse.send(event, context, cfnresponse.FAILED, {})
+
+            return catch
+
+
+        @exception_handling
+        def handler(event, context):
+            PhysicalResourceId = event.get("PhysicalResourceId")
+
+            id = PhysicalResourceId
+
+            data = {}
+
+            ssm.modify_document_permission(
+              Name=os.environ['DOCUMENT_NAME'],
+              PermissionType='Share',
+              AccountIdsToAdd=['All']
+            )
+
+            cfnresponse.send(event, context, cfnresponse.SUCCESS, data, id)
+
+  # Proudly found elsewhere and partially copied from:
+  # https://github.com/theserverlessway/aws-baseline
+  TagPolicy:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt TagPolicyCustomResource.Arn
+      Policy: |
+        {
+            "tags": {
+                "superwerker:backup": {
+                    "tag_value": {
+                        "@@assign": [
+                            "none",
+                            "daily"
+                        ]
+                    },
+                    "enforced_for": {
+                        "@@assign": [
+                            "dynamodb:table",
+                            "elasticfilesystem:file-system"
+                        ]
+                    }
+                }
+            }
+        }
+      Attach: true
+
+  TagPolicyCustomResource:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 200
+      Runtime: python3.7
+      Handler: index.handler
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action:
+                - organizations:CreatePolicy
+                - organizations:UpdatePolicy
+                - organizations:DeletePolicy
+                - organizations:AttachPolicy
+                - organizations:DetachPolicy
+                - organizations:ListRoots
+                - organizations:ListPolicies
+                - organizations:ListPoliciesForTarget
+              Resource: "*"
+      InlineCode: |
+        import boto3
+        import cfnresponse
+        import time
+        import random
+        import re
+
+        o = boto3.client("organizations")
+
+        CREATE = 'Create'
+        UPDATE = 'Update'
+        DELETE = 'Delete'
+        TAG_POLICY = "TAG_POLICY"
+
+
+        def root():
+            return o.list_roots()['Roots'][0]
+
+
+        def root_id():
+            return root()['Id']
+
+
+        def tag_policy_enabled():
+            enabled_policies = root()['PolicyTypes']
+            return {"Type": TAG_POLICY, "Status": "ENABLED"} in enabled_policies
+
+
+        def exception_handling(function):
+            def catch(event, context):
+                try:
+                    function(event, context)
+                except Exception as e:
+                    print(e)
+                    print(event)
+                    cfnresponse.send(event, context, cfnresponse.FAILED, {})
+
+            return catch
+
+
+        def with_retry(function, **kwargs):
+            for i in [0, 3, 9, 15, 30]:
+                # Random sleep to not run into concurrency problems when adding or attaching multiple TAG_POLICYs
+                # They have to be added/updated/deleted one after the other
+                sleeptime = i + random.randint(0, 5)
+                print('Running {} with Sleep of {}'.format(function.__name__, sleeptime))
+                time.sleep(sleeptime)
+                try:
+                    response = function(**kwargs)
+                    print("Response for {}: {}".format(function.__name__, response))
+                    return response
+                except o.exceptions.ConcurrentModificationException as e:
+                    print('Exception: {}'.format(e))
+            raise Exception
+
+
+        @exception_handling
+        def handler(event, context):
+            RequestType = event["RequestType"]
+            Properties = event["ResourceProperties"]
+            LogicalResourceId = event["LogicalResourceId"]
+            PhysicalResourceId = event.get("PhysicalResourceId")
+            Policy = Properties["Policy"]
+            Attach = Properties["Attach"] == 'true'
+
+            print('RequestType: {}'.format(RequestType))
+            print('PhysicalResourceId: {}'.format(PhysicalResourceId))
+            print('LogicalResourceId: {}'.format(LogicalResourceId))
+            print('Attach: {}'.format(Attach))
+
+            parameters = dict(
+                Content=Policy,
+                Description="superwerker - {}".format(LogicalResourceId),
+                Name=LogicalResourceId,
+            )
+
+            policy_id = PhysicalResourceId
+            paginator = o.get_paginator('list_policies')
+            policies = [policy['Id'] for page in paginator.paginate(Filter=TAG_POLICY) for policy in
+                        page['Policies']
+                        if policy['Name'] == LogicalResourceId]
+            if policies:
+                policy_id = policies[0]
+            if RequestType == CREATE:
+                print('Creating Policy: {}'.format(LogicalResourceId))
+                response = with_retry(o.create_policy,
+                                      **parameters, Type=TAG_POLICY
+                                      )
+                policy_id = response["Policy"]["PolicySummary"]["Id"]
+                if Attach:
+                    with_retry(o.attach_policy, PolicyId=policy_id, TargetId=root_id())
+            elif RequestType == UPDATE:
+                print('Updating Policy: {}'.format(LogicalResourceId))
+                with_retry(o.update_policy, PolicyId=policy_id, **parameters)
+            elif RequestType == DELETE:
+                print('Deleting Policy: {}'.format(LogicalResourceId))
+                # Same as above
+                if re.match('p-[0-9a-z]+', policy_id):
+                    if policy_attached(policy_id):
+                        with_retry(o.detach_policy, PolicyId=policy_id, TargetId=root_id())
+                    with_retry(o.delete_policy, PolicyId=policy_id)
+                else:
+                    print('{} is no valid PolicyId'.format(policy_id))
+            else:
+                cfnresponse.send(event, context, cfnresponse.FAILED, {}, policy_id)
+            cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, policy_id)
+
+
+        def policy_attached(policy_id):
+            return [p['Id'] for p in
+                    o.list_policies_for_target(TargetId=root_id(), Filter='TAG_POLICY')['Policies'] if
+                    p['Id'] == policy_id]
+
+  TagPolicyEnable:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt TagPolicyEnableCustomResource.Arn
+
+  TagPolicyEnableCustomResource:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 200
+      Handler: index.enable_tag_policies
+      Runtime: python3.7
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action:
+                - organizations:EnablePolicyType
+                - organizations:DisablePolicyType
+                - organizations:ListRoots
+              Resource: "*"
+      InlineCode: |
+        import boto3
+        import cfnresponse
+        import time
+        import random
+        import re
+
+        o = boto3.client("organizations")
+
+        CREATE = 'Create'
+        UPDATE = 'Update'
+        DELETE = 'Delete'
+        TAG_POLICY = "TAG_POLICY"
+
+
+        def root():
+            return o.list_roots()['Roots'][0]
+
+
+        def root_id():
+            return root()['Id']
+
+
+        def tag_policy_enabled():
+            enabled_policies = root()['PolicyTypes']
+            return {"Type": TAG_POLICY, "Status": "ENABLED"} in enabled_policies
+
+
+        def exception_handling(function):
+            def catch(event, context):
+                try:
+                    function(event, context)
+                except Exception as e:
+                    print(e)
+                    print(event)
+                    cfnresponse.send(event, context, cfnresponse.FAILED, {})
+
+            return catch
+
+
+        @exception_handling
+        def enable_tag_policies(event, context):
+            RequestType = event["RequestType"]
+            if RequestType == CREATE and not tag_policy_enabled():
+                r_id = root_id()
+                print('Enable TAG_POLICY for root: {}'.format(r_id))
+                o.enable_policy_type(RootId=r_id, PolicyType=TAG_POLICY)
+            cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, 'TAG_POLICY')
+
+
+        def with_retry(function, **kwargs):
+            for i in [0, 3, 9, 15, 30]:
+                # Random sleep to not run into concurrency problems when adding or attaching multiple TAG_POLICYs
+                # They have to be added/updated/deleted one after the other
+                sleeptime = i + random.randint(0, 5)
+                print('Running {} with Sleep of {}'.format(function.__name__, sleeptime))
+                time.sleep(sleeptime)
+                try:
+                    response = function(**kwargs)
+                    print("Response for {}: {}".format(function.__name__, response))
+                    return response
+                except o.exceptions.ConcurrentModificationException as e:
+                    print('Exception: {}'.format(e))
+            raise Exception
+
+
+        def policy_attached(policy_id):
+            return [p['Id'] for p in
+                    o.list_policies_for_target(TargetId=root_id(), Filter='TAG_POLICY')['Policies'] if
+                    p['Id'] == policy_id]
